@@ -1,0 +1,17 @@
+<object xmlns:i18n="http://xml.zope.org/namespaces/i18n" name="portal_actions" meta_type="Plone Actions Tool">
+
+  <!-- OBJECT BUTTONS -->
+  <object name="object_buttons" meta_type="CMF Action Category">
+
+    <object name="revoke_permissions" meta_type="CMF Action" i18n:domain="opengever.core">
+      <property name="title" i18n:translate="">Revoke permissions</property>
+      <property name="description" i18n:translate="" />
+      <property name="url_expr">string:${object_url}/@@revoke_permissions</property>
+      <property name="icon_expr" />
+      <property name="available_expr">object/@@revoke_permissions/is_available</property>
+      <property name="visible">True</property>
+    </object>
+
+  </object>
+
+</object>
