@@ -23,6 +23,7 @@ Changelog
 - Respect tabbedview settings when generating an task or dossier excel export. [phgross]
 - Exclusively handle templates on Committee and not on CommitteeContainer anymore. [njohner]
 - Extend @listing endpoint with `tasks`-listing. [elioschmutz]
+- Add option not to revoke permissions associated with a task when closing it. [njohner]
 - Fix performance issue with search root exclusion in tabbed view listings. [lgraf]
 - Do not list auto-generated documents as recently touched. [njohner]
 - Standardize french and german translation of "attachments" in meetings. [njohner]
